<resources>
    <string name="app_name">Gluu oxPush2</string>
    <string name="app_header">Gluu oxPush2</string>

    <string name="oxpush2_into_text">Open Source Mobile Authentication from Gluu</string>

    <string name="label_user_name">User Name</string>
    <string name="label_authentication_method">Authentication Mode</string>
    <string name="label_authentication_type">Authentication Type</string>
    <string name="label_created">Created</string>
    <string name="label_issuer">Issuer</string>
    <string name="label_application">Application</string>

    <string name="action_settings">Settings</string>
    <string name="action_manage_keys">Manage Keys</string>
    <string name="button_scan_oxpush2">Scan oxPush2 QR code</string>
    <string name="button_approve">Approve</string>
    <string name="button_decline">Decline</string>

    <string name="scan_oxpush2_prompt">Scan oxPush2 login code</string>

    <string name="process_qr_code">Processing QR code</string>

    <string name="wrong_u2f_metadata">Failed to get Fido U2F metadata</string>
    <string name="failed_process_challenge">Fido U2F challenge was rejected</string>
    <string name="wrong_token_response">Fido U2F token response is invalid</string>
    <string name="failed_process_response">Fido U2F response was rejected</string>
    <string name="failed_process_status">Get unexpected Fido U2F status</string>
    <string name="invalid_qr_code">QR code contains invalid oxPush2 request</string>
    <string name="no_valid_key_handles">The aren\'t valid devices associated with specified application. Can you try again and remove expired key(s) associated this application</string>

    <string name="process_u2f_start">Attemting to get Fido U2F request, please wait…</string>
    <string name="process_u2f_request">Processing Fido U2F request, please wait…</string>

    <string name="auth_result_success">Successful authentication</string>
    <string name="auth_result_failed">Authentication failure</string>
    <string name="challenge_doesnt_match">Challenges doesn\'t match</string>

    <string name="one_step">One Step</string>
    <string name="two_step">Two Step</string>
</resources>
