<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:layout_gravity="center"
              tools:context=".ProcessFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="12dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/table_cell_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_application"
                android:id="@+id/text_application_label"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="16dp"
                android:layout_column="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/text_application_value"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/table_cell_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_issuer"
                android:id="@+id/text_issuer_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/text_issuer_value"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark"
                android:singleLine="true"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/table_cell_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_created"
                android:id="@+id/text_application_created_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/text_created_value"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/table_cell_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_authentication_type"
                android:id="@+id/text_authentication_type_label"
                android:enabled="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/text_authentication_type_value"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/table_cell_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_authentication_method"
                android:id="@+id/text_authentication_method_label"
                android:enabled="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/text_authentication_method_value"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/table_cell_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_user_name"
                android:id="@+id/text_user_name_label"
                android:enabled="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/text_user_name_label_value"
                android:layout_column="2"
                android:textColor="@color/colorPrimaryDark"/>
        </TableRow>

    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="25dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/action_button_group"
        android:visibility="visible">

        <Button
            android:id="@+id/button_approve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_approve"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_decline"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress_group"
        android:paddingTop="25dp"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/process_u2f_start"
            android:id="@+id/status_text"
            android:layout_gravity="center"
            android:visibility="invisible"/>
    </LinearLayout>

</LinearLayout>
